feat 新增contect頁面　html所有文字內容

--- a/src/contect.html
+++ b/src/contect.html
@@ -35,16 +35,61 @@
         </section>
         <section class="wrapper">
             <div class="row">
-                <div class="about_card_1 col-12 col-sm-6">
-                    <H2>你</H2>
-                </div>
-                <div class="col-12 col-sm-6">
-                    <H2>你</H2>
-                </div>
+                <div class="contect_introduction col-12 col-sm-6">
+                    <form action="#">
+                        <div class="pt-45">
+                            <p type="您的姓名:">
+                                <input type="text" class="contect_box" id="name" name="" />
+                                <label for="name"></label>
+                            </p>
+                        </div>
+                        <div>
+                            <p type="電子郵件:">
+                                <input type="text" class="contect_box" id="name" name="" />
+                                <label for="name"></label>
+                            </p>
+                        </div>
+                        <div>
+                            <p type="連絡電話:">
+                                <input type="text" class="contect_box" id="name" name="" />
+                                <label for="name"></label>
+                            </p>
+                        </div>
+                        <div>
+                            <p type="貴公司名稱:">
+                                <input type="text" class="contect_box" id="name" name="" />
+                                <label for="name"></label>
+                            </p>
+                        </div>
+                        <div>
+                            <p type="您的展覽類型:">
+                                <input type="text" class="contect_box" id="name" name="" />
+                                <label for="name"></label>
+                            </p>
+                        </div>
+                        <div>
+                            <p type="訊息內容:">
+                                <input type="textarea" class="contect_box" id="name" name="" />
+                                <label for="name"></label>
+                            </p>
+                        </div>
 
+                    </form>
+                </div>
+                <div class="contect_information col-12 col-sm-6 ">
+                    <div class="contect_info">
+                        <h3>聯絡資訊</h3>
+                        <ul>
+                            <li class="contect_phone"><i class="fa-solid fa-phone"></i><h4 class="pt-7 pl-12">02-2712-0589</h4></li>
+                            <li class="contect_mail"><i class="fa-solid fa-envelope"></i> <h4 class="pt-7 pl-12">Tián_lám@gmail.com</h4></li>
+                            <li class="contect_address"><i class="fa-solid fa-location-dot"></i><h4 class="pt-7 pl-12">104506台北市中山區南京東路三段219號5樓</h4></li>
+                        </ul>
+                    </div>
+                    <div class="contect_map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57831.48527792461!2d121.50823397910158!3d25.052128000000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abe6b0446815%3A0xf006dde8c27afcc7!2z57ev6IKyVGliYU1l6ZmE6Kit5Y-w5YyX6IG36KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1648541154153!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
             </div>
-            
-
         </section>
     </main>
     <!-- footer -->
