--- a/src/about.html
+++ b/src/about.html
@@ -26,9 +26,9 @@
     @@include('layout/nav.html')
   </nav>
 
-  <head>
+  <header>
     @@include('layout/login.html')
-  </head>
+  </header>
   <!-- content，各自頁面的html寫在這邊以下都是範例 大區塊外面包section  -->
   <main >
     <section class="about_banner">
