--- a/src/companyback.html
+++ b/src/companyback.html
@@ -24,9 +24,9 @@
     @@include('layout/nav.html')
   </nav>
 
-  <head>
+  <header>
     @@include('layout/login.html')
-  </head>
+  </header>
   <!-- content，各自頁面的html寫在這邊以下都是範例 -->
   <main>
     <section class="wrapper">
