--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,8 @@
   <link rel="icon" href="img/tianlam-logo-mainblack.svg">
   <!-- slider (swiper) -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-  
+      <!-- jQuery -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 
   <title>About</title>
