--- a/src/contect.html
+++ b/src/contect.html
@@ -12,6 +12,8 @@
         integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
     <!-- title icon -->
     <link rel="icon" href="img/tianlam-logo-mainblack.svg">
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <title>Contect</title>
 </head>
@@ -39,37 +41,37 @@
                     <form action="#">
                         <div class="pt-45">
                             <p type="您的姓名:">
-                                <input type="text" class="contect_box" id="name" name="" />
+                                <input type="text" class="contect_box" id="contect_name" name="" />
                                 <label for="name"></label>
                             </p>
                         </div>
                         <div>
                             <p type="電子郵件:">
-                                <input type="text" class="contect_box" id="name" name="" />
+                                <input type="text" class="contect_box" id="contect_mmail" name="" />
                                 <label for="name"></label>
                             </p>
                         </div>
                         <div>
                             <p type="連絡電話:">
-                                <input type="text" class="contect_box" id="name" name="" />
+                                <input type="text" class="contect_box" id="contect_phone" name="" />
                                 <label for="name"></label>
                             </p>
                         </div>
                         <div>
                             <p type="貴公司名稱:">
-                                <input type="text" class="contect_box" id="name" name="" />
+                                <input type="text" class="contect_box" id="contect_itd" name="" />
                                 <label for="name"></label>
                             </p>
                         </div>
                         <div>
                             <p type="您的展覽類型:">
-                                <input type="text" class="contect_box" id="name" name="" />
+                                <input type="text" class="contect_box" id="contect_type" name="" />
                                 <label for="name"></label>
                             </p>
                         </div>
                         <div>
                             <p type="訊息內容:">
-                                <input type="textarea" class="contect_box" id="name" name="" />
+                                <input type="textarea" class="contect_box" id="contect_content" name="" />
                                 <label for="name"></label>
                             </p>
                         </div>
@@ -80,13 +82,38 @@
                     <div class="contect_info">
                         <h3>聯絡資訊</h3>
                         <ul>
-                            <li class="contect_phone"><i class="fa-solid fa-phone"></i><h4 class="pt-7 pl-12">02-2712-0589</h4></li>
-                            <li class="contect_mail"><i class="fa-solid fa-envelope"></i> <h4 class="pt-7 pl-12">Tián_lám@gmail.com</h4></li>
-                            <li class="contect_address"><i class="fa-solid fa-location-dot"></i><h4 class="pt-7 pl-12">104506台北市中山區南京東路三段219號5樓</h4></li>
+                            <li class="contect_phone"><i class="fa-solid fa-phone"></i>
+                                <h4 class="pt-7 pl-12">02-2712-0589</h4>
+                            </li>
+                            <li class="contect_mail"><i class="fa-solid fa-envelope"></i>
+                                <h4 class="pt-7 pl-12">Tián_lám@gmail.com</h4>
+                            </li>
+                            <li class="contect_address"><i class="fa-solid fa-location-dot"></i>
+                                <h4 class="pt-7 pl-12">104506台北市中山區南京東路三段219號5樓</h4>
+                            </li>
                         </ul>
                     </div>
                     <div class="contect_map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57831.48527792461!2d121.50823397910158!3d25.052128000000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abe6b0446815%3A0xf006dde8c27afcc7!2z57ev6IKyVGliYU1l6ZmE6Kit5Y-w5YyX6IG36KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1648541154153!5m2!1szh-TW!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57831.48527792461!2d121.50823397910158!3d25.052128000000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abe6b0446815%3A0xf006dde8c27afcc7!2z57ev6IKyVGliYU1l6ZmE6Kit5Y-w5YyX6IG36KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1648541154153!5m2!1szh-TW!2stw"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="contect_QA">
+                        <ul>
+                            <li>
+                                <button type="button" class="contect_btn">
+                                    <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
+                                    <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span>
+                                </button>
+                                <div class="contect_question">
+                                    <h4>Q1.提供甚麼服務</h4>
+                                </div>
+                                <div class="contect_answer pl-38 pb-16">
+                                    <h4>為您建置虛擬商展，且提供直播服務，讓您知道參展人員即時反饋，還有專屬後台方便您們管理參展資訊內容。</h4>
+                                </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -101,6 +128,7 @@
     <script src="js/main.min.js"></script>
     <script src="js/login.min.js"></script>
     <script src="js/index.min.js"></script>
+    <script src="js/contect.min.js"></script>
     <script>
 
     </script>
