--- a/src/index.html
+++ b/src/index.html
@@ -78,24 +78,30 @@
           <div class="swiper-slide">
             <a href="./live.html">
               <img src="./img/index/02.svg"/>
-              <h2>現正直播</h2>
-              <h3>Live</h3>
+              <div>
+                <h2>現正直播</h2>
+                <h3>Live</h3>
+              </div>
             </a>
           </div>
           
-          <div class="swiper-slide" style="border: 1px solid pink;">
+          <div class="swiper-slide">
             <a href="./extend.html">
               <img src="./img/index/02.svg"/>
-              <h2>虛擬商展</h2>
-              <h3>Exhibition</h3>
+              <div>
+                <h2>虛擬商展</h2>
+                <h3>Exhibition</h3>
+              </div>
             </a>
           </div>
           
           <div class="swiper-slide">
               <a href="./about.html">
                 <img src="./img/index/02.svg"/>
-                <h2>展會介紹</h2>
-                <h3>About</h3>
+                <div>
+                  <h2>展會介紹</h2>
+                  <h3>About</h3>
+                </div>
               </a>
           </div>
         </div>
