--- a/src/contect.html
+++ b/src/contect.html
@@ -93,13 +93,13 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="contect_map">
+                    <div class="contect_map mt-20 mb-20">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57831.48527792461!2d121.50823397910158!3d25.052128000000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abe6b0446815%3A0xf006dde8c27afcc7!2z57ev6IKyVGliYU1l6ZmE6Kit5Y-w5YyX6IG36KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1648541154153!5m2!1szh-TW!2stw"
                             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                    <div class="contect_QA">
+                    <div class="contect_QA pb-10">
                         <ul>
                             <li>
                                 <button type="button" class="contect_btn">
@@ -113,8 +113,34 @@
                                     <h4>為您建置虛擬商展，且提供直播服務，讓您知道參展人員即時反饋，還有專屬後台方便您們管理參展資訊內容。</h4>
                                 </div>
                             </li>
+                            <li>
+                                <button type="button" class="contect_btn">
+                                    <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
+                                    <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span>
+                                </button>
+                                <div class="contect_question">
+                                    <h4>Q2.如何設置展攤</h4>
+                                </div>
+                                <div class="contect_answer pl-38 pb-16">
+                                    <h4>我們會依據您的預算，交由專業人員，為您客製化符合期待之展攤樣式。</h4>
+                                </div>
+                            </li>
+                            <li>
+                                <button type="button" class="contect_btn">
+                                    <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
+                                    <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span>
+                                </button>
+                                <div class="contect_question">
+                                    <h4>Q3.設置展攤費用</h4>
+                                </div>
+                                <div class="contect_answer pl-38 pb-16">
+                                    <h4>您可透過左方表單填寫基本資料，後續將與您聯繫商討，如有任何問題可透過聯絡資訊裡的訊息聯繫我們。</h4>
+                                </div>
+                            </li>
+
                         </ul>
                     </div>
+
                 </div>
             </div>
         </section>
