feat:完成攤位留言板css樣式

--- a/src/extend.html
+++ b/src/extend.html
@@ -65,8 +65,8 @@
             </div>
           </div>
         </div>
-        <!-- 攤位圖&內容 -->
-        <div class="swiper-wrapper extend_body">
+        <!-- 攤位圖&內容&各自聊天室 -->
+        <div class="swiper-wrapper extend_body swiper-no-swiping">
           <div class="swiper-slide wrapper">
             <section class="extend_look">
               <article class="extend_booth1">
@@ -84,6 +84,25 @@
                 </div>
                 <i class="fa-solid fa-comment-dots extend_chat"></i>
               </a>
+              <!-- chatbox彈窗 -->
+              <article class="extend_chatbox -border_maincolor">
+                <div class="chat_title mall-10 pall-10">
+                  <h3><i class="fa-solid fa-address-card main-color"></i>
+                  廠商名稱</h3>
+                  <i class="fa-regular fa-circle-xmark main-color"></i>
+                </div>
+                <div class="chated">
+                <p class="chat_content chat_content_you pall-5 mall-10 mt-30 ml-30">你今天過得好嗎?<span>Today, 2:01pm</span></p>
+                <p class="chat_content chat_content_you pall-5 mall-10 mt-30 ml-30">我過得很好喔<span>Today, 2:01pm</span></p>
+                <p class="chat_content chat_content_me pall-5 mall-10 mt-30 mr-30">對啊團專<span>Today, 2:01pm</span></p>
+                <p class="chat_content chat_content_me pall-5 mall-10 mt-30 mr-30">哭啊大家的動作也太快了吧<span>Today, 2:01pm</span></p>
+                <p class="chat_content chat_content_you pall-5 mall-10 mt-30 ml-30">所以你要振作一點阿<span>Today, 2:01pm</span></p>
+                </div>
+                <div class="chat_input">
+                  <input type="text" placeholder="請輸入訊息內容...">
+                  <button class="btn-short"><i class="fa-solid fa-paper-plane"></i></button>
+                </div>
+              </article>
             </section>
             <section class="extend_content wrapper -border_maincolor pall-20">
               <h3 class="pb-20 content_point content_pointed">關於我們</h3>
