feat 修改contect QA html 改成以flex方式排版,js 改成為符號轉180度及增加當按下時改顏色

--- a/src/contect.html
+++ b/src/contect.html
@@ -102,39 +102,43 @@
                     <div class="contect_QA pb-10">
                         <ul>
                             <li>
-                                <button type="button" class="contect_btn">
-                                    <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
-                                    <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span>
-                                </button>
                                 <div class="contect_question">
                                     <h4>Q1.提供甚麼服務</h4>
+
+                                    <button type="button" class="contect_btn">
+                                        <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
+                                        <!-- <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span> -->
+                                    </button>
                                 </div>
                                 <div class="contect_answer pl-38 pb-16">
                                     <h4>為您建置虛擬商展，且提供直播服務，讓您知道參展人員即時反饋，還有專屬後台方便您們管理參展資訊內容。</h4>
                                 </div>
                             </li>
                             <li>
-                                <button type="button" class="contect_btn">
-                                    <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
-                                    <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span>
-                                </button>
                                 <div class="contect_question">
                                     <h4>Q2.如何設置展攤</h4>
+
+                                    <button type="button" class="contect_btn">
+                                        <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
+                                        <!-- <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span> -->
+                                    </button>
                                 </div>
                                 <div class="contect_answer pl-38 pb-16">
                                     <h4>我們會依據您的預算，交由專業人員，為您客製化符合期待之展攤樣式。</h4>
                                 </div>
                             </li>
                             <li>
-                                <button type="button" class="contect_btn">
-                                    <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
-                                    <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span>
-                                </button>
                                 <div class="contect_question">
                                     <h4>Q3.設置展攤費用</h4>
+
+                                    <button type="button" class="contect_btn">
+                                        <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
+                                        <!-- <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span> -->
+                                    </button>
                                 </div>
                                 <div class="contect_answer pl-38 pb-16">
-                                    <h4>您可透過左方表單填寫基本資料，後續將與您聯繫商討，如有任何問題可透過聯絡資訊裡的訊息聯繫我們。</h4>
+                                    <h4>您可透過左方表單填寫基本資料，後續將與您聯繫商討，
+                                        如有任何問題可透過聯絡資訊裡的訊息聯繫我們。</h4>
                                 </div>
                             </li>
 
