feat 修改about img路徑 輪播外面包一層  /contect col改成sm-5

--- a/src/about.html
+++ b/src/about.html
@@ -144,17 +144,17 @@
     <section class="about_exhibitor">
       <div class="mb-10 wrapper about_title">參與廠商</div>
       <!-- Swiper -->
-    <div class="swiper mySwiper">
+    <div class="swiper mySwiper about_mySwiper">
       <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="/img/sample/Logo1.png"></div>
-          <div class="swiper-slide"><img src="/img/sample/Logo2.png"></div>
-          <div class="swiper-slide"><img src="/img/sample/Logo3.png"></div>
-          <div class="swiper-slide"><img src="/img/sample/Logo4.png"></div>
-          <div class="swiper-slide"><img src="/img/sample/Logo5.png"></div>
-          <div class="swiper-slide"><img src="/img/sample/Logo6.png"></div>
-          <div class="swiper-slide"><img src="/img/sample/Logo7.png"></div>
+          <div class="swiper-slide about_slide"><img src="img/sample/Logo1.png"></div>
+          <div class="swiper-slide about_slide"><img src="img/sample/Logo2.png"></div>
+          <div class="swiper-slide about_slide"><img src="img/sample/Logo3.png"></div>
+          <div class="swiper-slide about_slide"><img src="img/sample/Logo4.png"></div>
+          <div class="swiper-slide about_slide"><img src="img/sample/Logo5.png"></div>
+          <div class="swiper-slide about_slide"><img src="img/sample/Logo6.png"></div>
+          <div class="swiper-slide about_slide"><img src="img/sample/Logo7.png"></div>
       </div>
-      <div class="swiper-scrollbar"></div>
+      <div class="swiper-scrollbar about_scrollbar"></div>
   </div>
     </section>
 
