--- a/src/contect.html
+++ b/src/contect.html
@@ -35,9 +35,9 @@
                 <h2>策展這件事，就是聚策展的事</h2>
             </div>
         </section>
-        <section class="wrapper">
-            <div class="row">
-                <div class="contect_introduction col-12 col-sm-6">
+        <section class="contect wrapper ">
+            <div class="row" style="border: 1px solid red">
+                <div class="contect_introduction col-12 col-sm-5" style="border: 1px solid white">
                     <form action="#">
                         <div class="pt-45">
                             <p type="您的姓名:">
@@ -78,7 +78,7 @@
 
                     </form>
                 </div>
-                <div class="contect_information col-12 col-sm-6 ">
+                <div class="contect_information col-12 col-sm-5 " style="border: 1px solid pink">
                     <div class="contect_info">
                         <h3>聯絡資訊</h3>
                         <ul>
