fix:swiper class重疊問題修正

--- a/src/index.html
+++ b/src/index.html
@@ -73,9 +73,9 @@
           <div class="swiper-pagination"></div>
       </div>       -->
 
-      <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
+      <div class="swiper mySwiper index_swiper">
+        <div class="swiper-wrapper index_wrapper">
+          <div class="swiper-slide index_slide">
             <a href="./live.html">
               <img src="./img/index/02.svg"/>
               <div>
@@ -85,7 +85,7 @@
             </a>
           </div>
           
-          <div class="swiper-slide">
+          <div class="swiper-slide index_slide">
             <a href="./extend.html">
               <img src="./img/index/02.svg"/>
               <div>
@@ -95,7 +95,7 @@
             </a>
           </div>
           
-          <div class="swiper-slide">
+          <div class="swiper-slide index_slide">
               <a href="./about.html">
                 <img src="./img/index/02.svg"/>
                 <div>
